tests/functional2/lang/function-args/parse-fail-dup-formals.err.exp
error: duplicate formal function argument 'x'
       at /pwd/in.nix:1:8:
            1| {x, y, x}: x
             |        ^
